--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,6 @@
 	path = cmake/configs/uavcan_board_ident
 	url = https://github.com/PX4/uavcan_board_ident.git
 	branch = master
+[submodule "Tools/sitl_gazebo"]
+	path = Tools/sitl_gazebo
+	url = git@github.com:TokyoClod/sitl_gazebo.git
