--- a/.gitmodules
+++ b/.gitmodules
@@ -53,6 +53,8 @@
 [submodule "Tools/sitl_gazebo"]
 	path = Tools/sitl_gazebo
 	url = git@github.com:TokyoClod/sitl_gazebo.git
+	branch = master
 [submodule "src/lib/ecl"]
 	path = src/lib/ecl
 	url = git@github.com:TokyoClod/ecl.git
+	branch = master
